examples/c/error-codes/violates-constraint/nonfatal/CV-TSE2-bad-static.output
CV-TSE2-bad-static.c:8:8: warning: incompatible function pointer types initializing 'int (*)(double)' with an expression of type 'int (*)(int)' [-Wincompatible-function-pointer-types]
 int (*x)(double) = &f;
       ^            ~~
1 warning generated.
CV-TSE2-bad-static.c:8:8: error: Incompatible pointer types in initializer or function call arguments.

    Constraint violation (CV-TSE2):
        see C11 section 6.7.9:11 http://rvdoc.org/C11/6.7.9
        see C11 section 6.5.16.1:1 http://rvdoc.org/C11/6.5.16.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

